exercises/06-ingress-to-gateway-api/solution/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: traffic-director
  namespace: project-r500
spec:
  parentRefs:
    - name: main
  hostnames:
    - r500.gateway
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /desktop
      backendRefs:
        - name: desktop
          port: 80
    - matches:
        - path:
            type: PathPrefix
            value: /mobile
      backendRefs:
        - name: mobile
          port: 80
    - matches:
        - path:
            type: PathPrefix
            value: /auto
          headers:
            - name: User-Agent
              type: Exact
              value: mobile
      backendRefs:
        - name: mobile
          port: 80
    - matches:
        - path:
            type: PathPrefix
            value: /auto
      backendRefs:
        - name: desktop
          port: 80
